# android-voxel-game

./: .gitignore  README.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/engine/: Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  World.cpp  World.h
app/src/main/java/com/mcme/: GameActivity.kt  GameSurfaceView.kt  MainActivity.kt  NativeLib.kt  SettingsActivity.kt
app/src/main/java/com/mcme/ui/: JoystickView.kt
app/src/main/res/drawable/: ic_back.xml  ic_launcher_foreground.xml  ic_play.xml  ic_settings.xml
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
